--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "astro": "^1.6.11",
     "astro-i18next": "^1.0.0-beta.14"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^7.8.3"
   }
 }
