--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18n:generate": "astro-i18next generate"
   },
   "dependencies": {
+    "@astrojs/partytown": "^1.0.3",
     "@astrojs/preact": "^2.0.2",
     "astro": "^2.0.6",
     "astro-i18next": "^1.0.0-beta.17",
