--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@astrojs/preact": "^2.0.2",
     "astro": "^2.0.6",
     "astro-compress": "^1.1.33",
+    "astro-critters": "^1.1.29",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "astro-i18next": "^1.0.0-beta.17",
     "preact": "^10.11.3"
   },
